// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`docs/rules/deprecated.md inline validation: correct 1`] = `Array []`;

exports[`docs/rules/deprecated.md inline validation: custom-message 1`] = `
Array [
  Object {
    "errorCount": 1,
    "filePath": "inline",
    "messages": Array [
      Object {
        "column": 2,
        "context": Object {
          "tagName": "my-element",
        },
        "line": 1,
        "message": "<my-element> is deprecated: replaced with <other-element>",
        "offset": 1,
        "ruleId": "deprecated",
        "ruleUrl": "https://html-validate.org/rules/deprecated.html",
        "selector": "my-element",
        "severity": 2,
        "size": 10,
      },
    ],
    "source": "<my-element>...</my-element>",
    "warningCount": 0,
  },
]
`;

exports[`docs/rules/deprecated.md inline validation: incorrect 1`] = `
Array [
  Object {
    "errorCount": 2,
    "filePath": "inline",
    "messages": Array [
      Object {
        "column": 2,
        "context": Object {
          "documentation": "Use the CSS \`text-align\` or \`margin: auto\` properties instead.",
          "message": "use CSS instead",
          "source": "html4",
          "tagName": "center",
        },
        "line": 1,
        "message": "<center> is deprecated: use CSS instead",
        "offset": 1,
        "ruleId": "deprecated",
        "ruleUrl": "https://html-validate.org/rules/deprecated.html",
        "selector": "center",
        "severity": 2,
        "size": 6,
      },
      Object {
        "column": 2,
        "context": Object {
          "documentation": "Use CSS \`font-size\` property instead.",
          "message": "use CSS instead",
          "source": "html5",
          "tagName": "big",
        },
        "line": 2,
        "message": "<big> is deprecated: use CSS instead",
        "offset": 22,
        "ruleId": "deprecated",
        "ruleUrl": "https://html-validate.org/rules/deprecated.html",
        "selector": "big",
        "severity": 2,
        "size": 3,
      },
    ],
    "source": "<center>...</center>
<big>...</big>",
    "warningCount": 0,
  },
]
`;
